--- a/src/app/member-list/member-list.component.html
+++ b/src/app/member-list/member-list.component.html
@@ -1,3 +1,16 @@
-<p>
-  member-list works!
-</p>
+<h3>Our Members</h3>
+<br><br>
+<div class="row">
+  <div *ngFor="let member of members | async">
+    <div class="col-md-3 col-xs-6">
+      <div class="thumbnail">
+      <img src="../../assets/img/profile.jpg" alt="Profile Pic">
+      <div class="caption">
+        <h3>{{member.fullName}}</h3>
+        <p>Phone Number: {{member.phoneNumber}}</p>
+        <p><a [routerLink]="[member.$key]" class="btn btn-primary" role="button">View Profile</a></p>
+      </div>
+    </div>
+    </div>
+  </div>
+</div>
