--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
     <ul class="nav navbar-nav">
       <li><a routerLink="about">About Us</a></li>
       <li><a routerLink="members">Members</a></li>
+      <li><a routerLink="members/new">Sign Up</a></li>
     </ul>
   </div>
 </nav>
