--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,5 +1,31 @@
-<h3>Welcome To The Club</h3>
-
-<p>
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</p>
+<h3>Marcus Garvey Star Liners</h3>
+<br>
+<div class="row">
+  <div class="col-md-6">
+    <div class="row">
+      <p>
+        Welcome to Marcus Garvey Star Liners. We are an idependant interplanetary transport service. Whatever your need is, wherever you need to go we can get you there. We offer a variety of membership levels to suit your needs.
+      </p>
+    </div>
+    <br>
+    <br>
+    <div class="row">
+      <div class="col-md-4">
+        <h4>Green</h4>
+        <p>Basic Membership. For short personal journeys aboard the tug Marcus Garvey.</p>
+      </div>
+      <div class="col-md-4">
+        <h4>Red</h4>
+        <p>For Business Customers. We'll tug your cargo wherever you need it delivered!</p>
+      </div>
+      <div class="col-md-4">
+        <h4>Gold</h4>
+        <p>Private vacation rentals. We'll tug your private yacht to scenic locations such as Zion and Villa Straylight!</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <img src="../../assets/img/marcus-garvey.jpg" class="img-responsive" alt="Marcus Garvey" />
+  </div>
+</div>
+<br>
