--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">The Club</a>
+      <a class="navbar-brand" routerLink="">Marcus Garvey Star Liners</a>
     </div>
     <ul class="nav navbar-nav">
       <li><a routerLink="about">About Us</a></li>
@@ -10,6 +10,6 @@
     </ul>
   </div>
 </nav>
-<div class="container">
+<div class="container main-body">
   <router-outlet></router-outlet>
 </div>
