--- a/src/app/member-profile/member-profile.component.html
+++ b/src/app/member-profile/member-profile.component.html
@@ -1,12 +1,15 @@
-<img src="../../assets/img/profile.jpg" alt="Profile Pic" />
-<h3>{{(currentMember | async)?.fullName}}</h3>
-<hr>
-<p>
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</p>
-<p>Phone: {{(currentMember | async)?.phoneNumber}}</p>
+<div *ngIf="currentMember">
+  <img src="../../assets/img/profile.jpg" alt="Profile Pic" />
+  <h3>{{currentMember.fullName}}</h3>
+  <hr>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+  <p>Phone: {{currentMember.phoneNumber}}</p>
+  <p>Membership Level: <span [ngClass]="memberLabelColor(currentMember.level)">{{currentMember.level}}</span></p>
 
-<p>
-  <button class="btn btn-primary" [routerLink]="['edit']">Edit Member</button>
-  <button class="btn btn-danger" (click)="deleteMember()">Delete Member</button>
-</p>
+  <p>
+    <button class="btn btn-primary" [routerLink]="['edit']">Edit Member</button>
+    <button class="btn btn-danger" (click)="deleteMember()">Delete Member</button>
+  </p>
+</div>
