--- a/src/app/new-member/new-member.component.html
+++ b/src/app/new-member/new-member.component.html
@@ -11,5 +11,15 @@
     <input pattern="\d{3}[\-]\d{3}[\-]\d{4}" class="form-control" placeholder="000-000-0000" #newPhone>
   </div>
 
+  <div class="form-group">
+    <label>Membership Level</label>
+    <select class="form-control" (change)="setLevel($event.target.value)">
+      <option value="GREEN" selected>Green</option>
+      <option value="RED">Red</option>
+      <option value="GOLD">Gold</option>
+    </select>
+  </div>
+
+
   <button class="btn btn-primary" (click)="createMember(newFirstName.value, newLastName.value, newPhone.value); newFirstName.value=''; newLastName.value=''; newPhone.value='';">Create Account</button>
 </div>
